public/style.css
:root {
  font-family: 'Ubuntu', sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #111111;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
  font-family: 'Ubuntu', sans-serif;
}
a:hover {
  color: #535bf2;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

#app {
  min-width: 100vw;
  min-height: 100vh;
  margin: 0 auto;
  border: none;
}

body {
  background-color: #111111;
  color: white;
  margin: 0;
  padding: 0;
  font-family: 'Ubuntu', sans-serif;
}

#header {
  background-color: #222222;
  color: white;
  text-align: center;
  padding: 10px;
  width: 100vw;
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 38px;
  font-family: 'Ubuntu', sans-serif;
}

#header h1 {
  margin: 0;
  margin-bottom: 5px;
}

#link_tray {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
}

#link_tray a {
  color: white;
  text-decoration: none;
  margin: 0 10px;
}

#box {
  background: linear-gradient(to bottom right, lime, darkgreen);
  color: white;
  text-align: center;
  padding: 20px;
  border-radius: 20px;
  margin: 20px auto;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 175px;
  width: 58%;
}

@media (max-width: 768px) {
  #box {
    width: 90.22%;
  }
}

.box-img {
  width: 35px;
  height: 35px;
  margin-left: 10px;
}

#content {
  background-color: #222222;
  color: white;
  text-align: left;
  padding: 20px;
  border-radius: 20px;
  margin: 20px auto;
  width: 45%;
}

@media (max-width: 768px) {
  #content {
    width: 70%;
  }
}

h3 {
  position: relative;
  font-size: 1.5em;
  font-weight: bold;
  margin-bottom: 0.5em;
}

h3::after {
  content: '';
  display: block;
  width: 100%;
  height: 0.33px;
  background-color: rgba(153, 153, 153, 0.33);
  position: absolute;
  bottom: -0.5em;
  left: 0;
}

p {
  margin-top: 1.66em;
  margin-bottom: 3.25em;
}

#box h2 {
  display: inline;
  margin-left: 10px;
}

.dropbtn {
  background-color: #111111;
  color: white;
  padding: 12px 17px;
  font-size: 16px;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  display: inline;
  position: absolute;
  left: 0;
  margin-left: 5px;
  font-family: 'Ubuntu', sans-serif;
}

.dropbtn:hover,
.dropbtn:focus {
  background-color: #333333;
}

.dropdown {
  margin-left: 0.5em;
  left: 0;
  font-family: 'Ubuntu', sans-serif;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
  top: 40px;
  left: 0;
  border-radius: 10px;
  opacity: 0;
  transform: scale(0.8);
  transition: opacity 0.3s ease, transform 0.3s ease;
  transform-origin: top;
  margin-top: 10px;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  border-radius: 10px;
}

.dropdown-content a:hover {
  background-color: #ddd;
}

.dropdown:hover .dropdown-content {
  display: block;
  opacity: 1;
  transform: scale(1);
}

.dropdown:hover .dropdown-content {
  display: block;
  opacity: 1;
  transform: translateY(10px);
}

#container {
  position: relative;
  width: 45px;
  height: 45px;
  transition: transform 0.3s ease-in-out;
}

#object {
  position: absolute;
  width: 45px;
  height: auto;
}

#container:hover {
  transform: scale(1.1); /* Expand the lime when hovering */
}

#container:hover #object {
  content: url('lime/smile.png'); /* Replace the face with smile.png when hovering */
}

#container:not(:hover) #object {
  content: url('lime/face.png'); /* Show the original face.png when not hovering */
}

